--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "types": "es/index.d.ts",
     "module": "es/index.js",
     "scripts": {
-        "site-dev": "tsc && webpack-dev-server --config site/webpack.config.js",
+        "site-dev": "webpack-dev-server --config scripts/webpack.config.js",
         "build-es": "node ./scripts/build-es.js",
         "build-bundle": "rollup -c"
     },
@@ -16,7 +16,7 @@
     ],
     "files": [
         "es",
-        "dist",
+        "dest",
         "assets"
     ],
     "repository": {
@@ -37,12 +37,17 @@
         "classnames": "^2.2.6"
     },
     "devDependencies": {
+        "@loadable/component": "^5.10.3",
         "@testing-library/react": "^9.3.2",
         "@types/classnames": "^2.2.9",
         "@types/jest": "^24.0.22",
+        "@types/loadable__component": "^5.10.0",
         "@types/react": "^16.9.11",
         "@types/react-dom": "^16.9.4",
+        "@types/react-router-config": "^5.0.1",
+        "@types/react-router-dom": "^5.1.2",
         "awesome-typescript-loader": "^5.2.1",
+        "case-sensitive-paths-webpack-plugin": "^2.2.0",
         "chalk": "^3.0.0",
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^5.0.5",
@@ -51,6 +56,7 @@
         "file-loader": "^4.2.0",
         "friendly-errors-webpack-plugin": "^1.7.0",
         "globby": "^10.0.1",
+        "hard-source-webpack-plugin": "^0.13.1",
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.8.0",
         "node-sass": "^4.13.0",
@@ -59,6 +65,8 @@
         "prettier": "^1.19.1",
         "react": "^16.11.0",
         "react-dom": "^16.11.0",
+        "react-router-config": "^5.1.1",
+        "react-router-dom": "^5.1.2",
         "rimraf": "^3.0.0",
         "rollup": "^1.27.0",
         "rollup-plugin-clear": "^2.0.7",
