--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
         "weui"
     ],
     "dependencies": {
-        "classnames": "^2.2.6"
+        "classnames": "^2.2.6",
+        "xy-badge": "^0.0.4"
     },
     "devDependencies": {
         "@loadable/component": "^5.10.3",
