--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "dependencies": {
         "classnames": "^2.2.6",
         "utils-hooks": "^0.0.75",
-        "xy-badge": "^0.1.0"
+        "xy-badge": "^0.1.0",
+        "xy-form": "^0.4.0"
     },
     "devDependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.25",
