--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
     "name": "weui-react",
-    "version": "0.0.1",
+    "version": "0.3.0",
     "description": "weui的react实现",
     "main": "es/index.js",
     "types": "es/index.d.ts",
     "module": "es/index.js",
     "scripts": {
         "site-dev": "webpack-dev-server --config scripts/webpack.config.js",
+        "site": "cross-env NODE_ENV=production webpack --config scripts/webpack.config.js",
         "build-es": "node ./scripts/build-es.js",
-        "build-bundle": "rollup -c"
+        "build-bundle": "rollup -c",
+        "test": "jest",
+        "_publish": "yarn run test && yarn run build-es && npm publish"
     },
     "sideEffects": [
         "*.css",
@@ -42,6 +45,8 @@
         "xy-tabs": "^1.2.2"
     },
     "devDependencies": {
+        "@babel/core": "^7.7.4",
+        "@babel/preset-env": "^7.7.4",
         "@fortawesome/fontawesome-svg-core": "^1.2.25",
         "@fortawesome/free-solid-svg-icons": "^5.11.2",
         "@fortawesome/react-fontawesome": "^0.1.7",
@@ -55,10 +60,13 @@
         "@types/react-router-config": "^5.0.1",
         "@types/react-router-dom": "^5.1.2",
         "awesome-typescript-loader": "^5.2.1",
+        "babel-jest": "^24.9.0",
+        "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
         "case-sensitive-paths-webpack-plugin": "^2.2.0",
         "chalk": "^3.0.0",
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^5.0.5",
+        "cross-env": "^6.0.3",
         "cross-spawn": "^7.0.1",
         "css-loader": "^3.2.0",
         "file-loader": "^4.2.0",
@@ -66,6 +74,9 @@
         "globby": "^10.0.1",
         "hard-source-webpack-plugin": "^0.13.1",
         "html-webpack-plugin": "^3.2.0",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^24.9.0",
+        "jest-svg-transformer": "^1.0.0",
         "mini-css-extract-plugin": "^0.8.0",
         "node-sass": "^4.13.0",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
@@ -88,6 +99,7 @@
         "sass-loader": "^8.0.0",
         "style-loader": "^1.0.0",
         "svelte": "^3.14.1",
+        "ts-jest": "^24.2.0",
         "tslib": "^1.10.0",
         "typescript": "^3.7.2",
         "url-loader": "^2.2.0",
