--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "weui-react",
+    "name": "weui-react-v2",
     "version": "0.3.0",
     "description": "weui的react实现",
     "main": "es/index.js",
@@ -104,6 +104,7 @@
         "typescript": "^3.7.2",
         "url-loader": "^2.2.0",
         "webpack": "^4.29.0",
+        "webpack-bundle-analyzer": "^3.6.0",
         "webpack-cli": "^3.2.1",
         "webpack-dev-server": "^3.1.14"
     }
