将`px`翻倍, 配合`postcss-px-to-viewport`使用.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "weui-react-v2",
-    "version": "0.5.3",
+    "version": "0.6.0",
     "description": "weui的react实现",
     "main": "es/index.js",
     "types": "es/index.d.ts",
@@ -81,6 +81,11 @@
         "node-sass": "^4.13.0",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "ora": "^4.0.2",
+        "postcss": "^7.0.23",
+        "postcss-aspect-ratio-mini": "^1.0.1",
+        "postcss-loader": "^3.0.0",
+        "postcss-px-to-viewport": "^1.1.1",
+        "postcss-scss": "^2.0.0",
         "prettier": "^1.19.1",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
